--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="styles.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
-  <title>Soundwave</title>
+  <title>AICN VPN NODE</title>
 </head>
 <body class="container full-height-grow">
   <header class="main-header">
     <a href="/" class="brand-logo">
       <img src="images/logo.png">
-      <div class="brand-logo-name">Soundwave</div>
+      <div class="brand-logo-name">AICN Virtual Proxy Server</div>
     </a>
     <nav class="main-nav">
       <ul>
-        <li><a href="discover.html">Discover</a></li>
-        <li><a href="join.html">Join</a></li>
+        <li><a href="discover.html">发现</a></li>
+        <li><a href="join.html">加入</a></li>
       </ul>
     </nav>
   </header>
