--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="styles.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
-  <title>AICN VPN NODE</title>
+  <title>智慧中国节点E</title>
 </head>
 <body class="container full-height-grow">
   <header class="main-header">
-    <a href="/" class="brand-logo">
+    <a href="/index.html" class="brand-logo">
       <img src="images/logo.png">
-      <div class="brand-logo-name">AICN Virtual Proxy Server</div>
+      <div class="brand-logo-name">智慧中国虚拟代理服务器</div>
     </a>
     <nav class="main-nav">
       <ul>
@@ -26,9 +26,9 @@
       <div class="lady-image"></div>
     </div>
     <div class="call-to-action">
-      <h1 class="title">Feel The Music</h1>
-      <span class="subtitle">Stream over 20 thousand songs with one click</span>
-      <a href="join.html" class="btn">Join Now</a>
+      <h1 class="title">感受科技的魅力.</h1>
+      <span class="subtitle">想了解更多的知识吗？</span>
+      <a href="join.html" class="btn">现在加入</a>
     </div>
   </section>
   <div class="home-page-circle-1"></div>
