--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="styles.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
-  <title>智慧中国节点E</title>
+  <title>AICN NODE</title>
 </head>
 <body class="container full-height-grow">
   <header class="main-header">
     <a href="/index.html" class="brand-logo">
       <img src="images/logo.png">
-      <div class="brand-logo-name">智慧中国虚拟代理服务器</div>
+      <div class="brand-logo-name">智慧中国节点</div>
     </a>
     <nav class="main-nav">
       <ul>
