--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <nav class="main-nav">
       <ul>
         <li><a href="discover.html">发现</a></li>
-        <li><a href="join.html">加入</a></li>
       </ul>
     </nav>
   </header>
@@ -31,8 +30,8 @@
       <a href="join.html" class="btn">现在加入</a>
     </div>
   </section>
-  <div class="home-page-circle-1"></div>
-  <div class="home-page-circle-2"></div>
-  <div class="home-page-circle-3"></div>
+  <div class="home-page-circle-1">1</div>
+  <div class="home-page-circle-2">2</div>
+  <div class="home-page-circle-3">3</div>
 </body>
 </html>
