--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <a href="join.html" class="btn">现在加入</a>
     </div>
   </section>
-  <div class="home-page-circle-1">1</div>
-  <div class="home-page-circle-2">2</div>
-  <div class="home-page-circle-3">3</div>
+  <div class="home-page-circle-1"></div>
+  <div class="home-page-circle-2"></div>
+  <div class="home-page-circle-3"></div>
 </body>
 </html>
