--- a/discover.html
+++ b/discover.html
@@ -6,25 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="styles.css" rel="stylesheet">
   <link href="discover.css" rel="stylesheet">
-  <title>Soundwave - Discover</title>
+  <title>AICN NODE MORE</title>
 </head>
 <body class="full-height-grow">
   <div class="container full-height-grow">
     <header class="main-header">
-      <a href="/" class="brand-logo">
+      <a href="/index.html" class="brand-logo">
         <img src="images/logo.png">
-        <div class="brand-logo-name">Soundwave</div>
+        <div class="brand-logo-name">更多信息</div>
       </a>
       <nav class="main-nav">
         <ul>
-          <li><a href="discover.html">Discover</a></li>
-          <li><a href="join.html">Join</a></li>
+          <li><a href="discover.html">更多信息</a></li>
         </ul>
       </nav>
     </header>
     <section class="discover-main-section">
       <div class="call-to-action">
-        <h1 class="title">Discover new music</h1>
+        <h1 class="title">我们需要人员</h1>
         <div class="icon-section">
           <div class="icon">
             <img src="images/microphone.svg">
